[Nav] youtube icon 추가

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -351,8 +351,10 @@ sidebar-architecture:
     url: /architecture/clean-architecture/
     children:
       - title: "소프트웨어 아키텍처 정의"
+        icon: "fab fa-youtube"
         url: /architecture/clean-architecture/definition/
       - title: "소프트웨어 아키텍처가 중요한 이유"
+        icon: "fab fa-youtube"
         url: /architecture/clean-architecture/importance/
 #  - title: "MVVM"
 #    url: /architecture/
