--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ description              : "슬금슬금 공부하기."
 url                      : #"https://swift-man.github.io/"# the base hostname & protocol for your site e.g.
 baseurl                  : #"/blog"# the subpath of your site, e.g. "/blog"
 repository               : "swift-man/swift-man.github.io"# GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
-teaser                   : "/assets/images/swift-man.png"# path of fallback teaser image, e.g. "/assets/images/500x300.png"
+teaser                   : #"/assets/images/swift-man.png"# path of fallback teaser image, e.g. "/assets/images/500x300.png"
 logo                     : "/assets/images/swift-man_88x88.png"# path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
 masthead_title           : "Swift-Man Blog"# overrides the website title displayed in the masthead, use " " for no title
 breadcrumbs            : false # true, false (default) // _data/ui-text.yml에 다국어 지원 가능합니다.
@@ -59,8 +59,8 @@ reCaptcha:
 atom_feed:
   path                   : # blank (default) uses feed.xml
   hide                   : # true, false (default)
-search                   : # true, false (default)
-search_full_content      : # true, false (default)
+search                   : true # true, false (default)
+search_full_content      : true # true, false (default)
 search_provider          : # lunr (default), algolia, google
 algolia:
   application_id         : # YOUR_APPLICATION_ID
