--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -174,6 +174,7 @@ sidebar-ios:
     url: /ios/objectivec/
     children:
       - title: "NSObject"
+        icon: "far fa-folder-open"
         url: /ios/objectivec/nsobject/
         children:
         - title: "nil, Nil, NULL, NSNull 대한 차이"
