--- a/_config.yml
+++ b/_config.yml
@@ -103,7 +103,7 @@ analytics:
 author:
   name             : "안녕하세요!"
   avatar           : "/assets/images/avatar.png"# path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "개인 공부 공간으로 틀린 부분이 있을 수 있습니다. 댓글로 알려주시면 감사하겠습니다!"
+  bio              : "개인 공부, 스크랩 공간압니다. 틀린 부분은 댓글로 알려주시면 감사하겠습니다!"
   location         : "Republic of Korea Seoul"
   email            : "jiniopening@naver.com"
   links:
