[Fix] 스크랩 아이콘 적용

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -253,7 +253,7 @@ sidebar-ios:
         url: /ios/app-thinning/on-demand/
   - title: "FairPlay Streaming"
     url: /ios/fairplay-streaming/
-    icon: "far fa-file-alt"
+    icon: "fas fa-link"
   - title: "Xcode"
     url: /ios/xcode/
     children:
