[Profile] 설정 변경

--- a/_config.yml
+++ b/_config.yml
@@ -105,14 +105,8 @@ author:
   avatar           : "/assets/images/avatar.png"# path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "개인 공부, 스크랩 공간압니다. 틀린 부분은 댓글로 알려주시면 감사하겠습니다!"
   location         : "Republic of Korea Seoul"
-  email            : "jiniopening@naver.com"
+  email            : #"jiniopening@naver.com"
   links:
-    - label: "Month Archive"
-      icon: "far fa-calendar-alt"
-      url: "/month-archive/"
-    - label: "Email"
-      icon: "fas fa-fw fa-envelope-square"
-#      url: "mailto:jiniopening@naver.com"
     - label: "Website"
       icon: "fas fa-fw fa-link"
       # url: "https://your-website.com"
@@ -125,10 +119,29 @@ author:
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
       url: "https://github.com/swift-man"
+    - label: "Email"
+      icon: "fas fa-fw fa-envelope-square"
+      url: "mailto:jiniopening@naver.com"
     - label: "Instagram"
       icon: "fab fa-fw fa-instagram"
       # url: "https://instagram.com/"
-
+    - label: ""
+      icon: "ad"
+      url: "#"
+    - label: "Posts by Month"
+      icon: "far fa-calendar-alt"
+      url: "/month-archive/"
+    - label: "Year"
+      icon: "far fa-calendar-alt"
+      #url: "/year-archive/"
+    - label: "Tag"
+      icon: "fas fa-tags"
+      #url: "/tags/"
+    - label: "Category"
+      icon: "fas fa-tags"
+      #url: "/categories/"
+    
+    
 # Site Footer
 footer:
   links:
@@ -146,7 +159,7 @@ footer:
       # url:
     - label: "Bitbucket"
       icon: "fab fa-fw fa-bitbucket"
-      # url:
+      url: "https://bitbucket.org/Swift-Man/"
     - label: "Instagram"
       icon: "fab fa-fw fa-instagram"
       # url:
