[Nav] 신규 Post 링크 추가

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -518,6 +518,8 @@ sidebar-git:
         url: /git/commend/reset/
       - title: "Revert"
         url: /git/commend/revert/
+      - title: "설정 - 대소문자 인식"
+        url: /git/commend/case-sensitive/
   - title: "Blog"
     url: /git/blog/
     children:
