--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -268,6 +268,8 @@ sidebar-ios:
       - title: "Creating a Source Editor Extension"
         url: /ios/xcode/create-source-editor-extension/
         icon: "fas fa-link"
+      - title: "Apple TV 4K 6세대 빌드를 위한 Mac 연결"
+        url: /ios/xcode/xcode-build-apple-tv-4k/
   - title: "Build Error"
     url: /ios/build-error/
     children:
