--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -338,6 +338,8 @@ sidebar-algorithm:
     children:
       - title: "31. Next Permutation"
         url: /algorithm/leet-code-medium/next-permutation/
+      - title: "146. LRU Cache"
+        url: /algorithm/leet-code-medium/lrucache/
   - title: "Leet Code - Hard"
     url: /algorithm/leet-code-hard/
     children:
